# RUST-in-DeepLearning

./: .gitignore  README.md
MNIST_Rust/: .gitignore  Cargo.toml
MNIST_Rust/src/: main.rs
