[package]
name = "MNIST_Rust"
version = "0.1.0"
authors = ["rajasekhar06 <rajasekhar.yadavalli@cognitiveinnovations.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neuro = "0.1.0"
jpeg-decoder = "0.1.20"
hdf5-sys = "0.6.1"
arrayfire = "3.7.0"
